--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 * {
     margin: 0;
-    
+
 }
 
 /* Common styles */
-p{
+p {
     font-size: 14px;
     font-weight: 500;
     font-family: 'Montserrat', sans-serif;
@@ -13,36 +13,22 @@ p{
     margin-bottom: 10px;
     line-height: 2em;
 }
-img{
-    margin-top: 4px;
-    width: 300px;
-    height: 450px;
-    border-top-left-radius:10px ;
-    border-bottom-left-radius:10px ;
-}
-.card-body{
-    background: #F3EAE3; 
+
+.card-body {
+    background: #F3EAE3;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.product-info{ 
-    width: 300px;
-    height: 450px;
-    display: grid;
-    grid-template-columns: repeat(1,1fr);
-    background-color: #FFFFFF;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    padding-left: 30px;
-}
-.product-info .title{ 
+
+.product-info .title {
     letter-spacing: 0.3em;
     color: hsl(228, 12%, 48%);
     margin-top: 10px;
     font-family: 'Montserrat', sans-serif;
 }
+
 .heading {
     font-family: 'Fraunces', serif;
     font-size: 2em;
@@ -51,7 +37,7 @@ img{
     color: hsl(212, 21%, 14%);
 }
 
-.product-info .btn-primary{
+.product-info .btn-primary {
     background-color: #3D8168;
     border: none;
     font-size: 1em;
@@ -61,48 +47,95 @@ img{
     border-bottom-right-radius: 10px;
     padding: 15px 50px 15px 10px;
 }
-.btn{
+
+.btn {
     display: flex;
     align-items: center;
     width: 80%;
     color: #fff;
     margin: 30px 0px;
 }
-.fa-solid.btn-cart{
+
+.fa-solid.btn-cart {
     padding: 16px 5px 16px 40px;
     background-color: #3D8168;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
 
-.prices{
+.prices {
     display: flex;
     align-items: center;
     gap: 25px;
 }
 
-.prices h2{ 
+.prices h2 {
     color: hsl(158, 36%, 37%);
     font-family: 'Fraunces', serif;
     font-size: 1.7em;
     margin: 5px 0;
 }
-.prices span{ 
+
+.prices span {
     color: hsl(158, 36%, 37%);
     font-size: 14px;
     font-weight: 500;
     font-family: 'Montserrat', sans-serif;
     color: hsl(228, 12%, 48%);
-    text-decoration:line-through;
+    text-decoration: line-through;
 }
 
 /* Media Query  Start*/
 
 /* For Mobiles */
-@media only screen and  (max-width: 375px){
-    
+@media screen and (max-width: 375px) {
+    .card-body {
+        background: #F3EAE3;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+
+    img {
+        width: 100vw;
+        height: 33vh;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+
+    .product-info {
+        width: 100vw;
+        height: 66vh;
+        background-color: #FFFFFF;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        padding: 50px 0px 20px 30px;
+
+    }
 }
+
 /* For Laptop and Desktops */
-@media only screen and (min-width: 376px) and  (max-width: 1440px){
-    
+@media only screen and (min-width: 376px) and (max-width: 1440px) {
+    img {
+        margin-top: 4px;
+        width: 300px;
+        height: 450px;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+    }
+
+    .product-info {
+        width: 300px;
+        height: 450px;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        background-color: #FFFFFF;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        padding-left: 30px;
+    }
+
 }
