--- a/style.css
+++ b/style.css
@@ -95,25 +95,16 @@ p {
         height: 100vh;
         display: flex;
         flex-direction: column;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
     }
-
     img {
         width: 100vw;
         height: 33vh;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
     }
-
     .product-info {
+        padding-left: 3em;
         width: 100vw;
-        height: 66vh;
+        height: 70vh;
         background-color: #FFFFFF;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
-        padding: 50px 0px 20px 30px;
-
     }
 }
 
